src/styles/About.scss
.about-header-image {
  background-image: url(../assets/2.png);
  background-repeat: no-repeat;
  height: 650px;
  min-width: 100%;
  background-size: cover;
}

.about-who-container {
  background: #3a1b0f;
  display: flex;
  flex-wrap: wrap;
  padding: 0rem 7rem 2rem 7rem;

  .about-who {
    width: 50%;

    .about-who-title {
      color: #ebdab6;
    }

    .about-who-paragraph {
      color: white;
    }

    .about-who-img {
      width: 50%;
    }
  }
}

.about-team-container {
  background: #866042;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  color: #fff;

  .about-team-card {
    border: 1px solid red;

    .about-team-name {
      text-align: center;
    }

    .about-team-img {
    }

    .about-team-description {
      text-align: center;
    }
  }
}

